--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
           </div>
         </form>
         <div class="find-me">
+          <hr />
           <h2>Find me on ...</h2>
           <div class="social-icons">
             <i class="fab fa-twitter"></i>
             <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
             <i class="fab fa-linkedin"></i>
             <i class="fab fa-pinterest"></i>
             <i class="fab fa-github"></i>
@@ -157,9 +157,10 @@
             <i class="fab fa-codepen"></i>
             <i class="fab fa-youtube"></i>
           </div>
+          <hr />
         </div>
         <footer class="copyrights">
-          <span>&copy; All rights reserved For <a href="http://linkedin.com/in/anasali0" target="_blank">Anas Banat</a></span><span>|</span><span>Design <a href="http://linkedin.com/in/anasali0" target="_blank">Anas Banat</a></span><span>|</span><span>Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></span> 
+          <span>&copy; All rights reserved For <a href="http://linkedin.com/in/anasali0" target="_blank">Anas Banat</a></span><span>|</span><span>Designed by: <a href="http://linkedin.com/in/anasali0" target="_blank">Anas Banat</a></span><span>|</span><span>Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></span> 
         </footer>
       </div>
     </section>
